--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1>‚±‚ê‚Ü‚Å‚É‚ ‚Á‚½YouTuber</h1>
-<img src="img/NULL1017.png"></img><a>2024”N9Œ8“ú</a><a>@</a><a>NULL1017</a><a>@</a><a href="https://youtube.com/nonick_mc">NoNICK</a><br>
-<img src="img/Quapot.png"></img><a>2024”N9Œ8“ú</a><a>@</a><a>Quapot</a><a>@</a><a href="https://www.youtube.com/@Quapot">Quapot</a><br>
-<img src="img/supekun0723.png"></img><a>2024”N10Œ27“ú</a><a>@</a><a>Supekun0723</a><a>@</a><a href="https://www.youtube.com/@SupeKun0723">supekun ƒXƒy‚­‚ñ</a><br>
-<img src="img/WADA Tomato.png"></img><a>2024”N11Œ9“ú , 2024”N11Œ14“ú</a><a>@</a><a>WADA Tomato</a><a>@</a><a href="https://www.youtube.com/@wadatomato">˜`“cƒgƒ}ƒg   WADA Tomato</a><br>
+<h1>ã“ã‚Œã¾ã§ã«ã‚ã£ãŸYouTuber</h1>
+<img src="img/NULL1017.png"></img><a>2024å¹´9æœˆ8æ—¥</a><a>ã€€</a><a>NULL1017</a><a>ã€€</a><a href="https://youtube.com/nonick_mc">NoNICK</a><br>
+<img src="img/Quapot.png"></img><a>2024å¹´9æœˆ8æ—¥</a><a>ã€€</a><a>Quapot</a><a>ã€€</a><a href="https://www.youtube.com/@Quapot">Quapot</a><br>
+<img src="img/supekun0723.png"></img><a>2024å¹´10æœˆ27æ—¥</a><a>ã€€</a><a>Supekun0723</a><a>ã€€</a><a href="https://www.youtube.com/@SupeKun0723">supekun ã‚¹ãƒšãã‚“</a><br>
+<img src="img/WADA Tomato.png"></img><a>2024å¹´11æœˆ9æ—¥ , 2024å¹´11æœˆ14æ—¥</a><a>ã€€</a><a>WADA Tomato</a><a>ã€€</a><a href="https://www.youtube.com/@wadatomato">å€­ç”°ãƒˆãƒãƒˆ   WADA Tomato</a><br>
