--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <img src="img/Quapot.png"></img><a>2024年9月8日</a><a>　</a><a>Quapot</a><a>　</a><a href="https://www.youtube.com/@Quapot">Quapot</a><br>
 <img src="img/supekun0723.png"></img><a>2024年10月27日</a><a>　</a><a>Supekun0723</a><a>　</a><a href="https://www.youtube.com/@SupeKun0723">supekun スペくん</a><br>
 <img src="img/WADA Tomato.png"></img><a>2024年11月9日 , 2024年11月14日 , 2024年11月17日</a><a>　</a><a>WADA Tomato</a><a>　</a><a href="https://www.youtube.com/@wadatomato">倭田トマト   WADA Tomato</a><br>
-<img src="img/putyoa.png"></img><a>2024年11月30日</a><a>　</a><a>Putyoa</a><a>　</a><a href="https://www.youtube.com/@Putyoa">ぷちょあ</a>
+<img src="img/putyoa.png"></img><a>2024年11月30日</a><a>　</a><a>Putyoa</a><a>　</a><a href="https://www.youtube.com/@Putyoa">ぷちょあ</a><br>
+<img src="img/aiueo1789.png"></img><a>2024年11月30日</a><a>　</a><a>AIUEO1789</a><a>　</a><a href="https://www.youtube.com/@AIUEO1789">AIUEO1789👍</a>
