--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <img src="img/supekun0723.png"></img><a>2024年10月27日</a><a>　</a><a>Supekun0723</a><a>　</a><a href="https://www.youtube.com/@SupeKun0723">supekun スペくん</a><br>
 <img src="img/WADA Tomato.png"></img><a>2024年11月9日 , 2024年11月14日 , 2024年11月17日 , 2024年12月6日</a><a>　</a><a>WADA Tomato</a><a>　</a><a href="https://www.youtube.com/@wadatomato">倭田トマト   WADA Tomato</a><br>
 <img src="img/NARU20000.png"></img><a>2024年11月10日 , 2024年12月11日</a><a>　</a><a>NARU20000</a><a>　</a><a href="https://www.youtube.com/@naruru0416">なるる-Naruru</a><br>
-<img src="img/Putyoa.png"></img><a>2024年11月30日 , 2024年12月1日 , 2024年12月4日 , 2024年12月7日 , 2024年12月10日</a><a>　</a><a>Putyoa</a><a>　</a><a href="https://www.youtube.com/@Putyoa">ぷちょあ</a><br>
+<img src="img/Putyoa.png"></img><a>2024年11月30日 , 2024年12月1日 , 2024年12月4日 , 2024年12月7日 , 2024年12月10日 , 2024年12月21日</a><a>　</a><a>Putyoa</a><a>　</a><a href="https://www.youtube.com/@Putyoa">ぷちょあ</a><br>
 <img src="img/AIUEO1789.png"></img><a>2024年11月30日</a><a>　</a><a>AIUEO1789</a><a>　</a><a href="https://www.youtube.com/@AIUEO1789">AIUEO1789👍</a><br>
 <img src="img/dolightmishiyu.png"></img><a>2024年12月7日</a><a>　</a><a>dolightmishiyu</a><a>　</a><a href="https://www.youtube.com/@dolightMishiyuGames">ドライトのゲーム実況ちゃんねるン.</a><br>
 <img src="img/TAMAG0 PvP.png"></img><a>2024年12月11日</a><a>　</a><a>TAMAG0 PvP</a><a>　</a><a href="https://www.youtube.com/@%E5%8D%B5%E6%8E%9B%E3%81%91%E3%81%AA%E3%81%84%E3%81%94%E9%A3%AF">卵かけないごはん</a><br>
