--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
 <img src="img/dolightmishiyu.png"></img><a>2024年12月7日</a><a>　</a><a>dolightmishiyu</a><a>　</a><a href="https://www.youtube.com/@dolightMishiyuGames">ドライトのゲーム実況ちゃんねるン.</a><br>
 <img src="img/TAMAG0 PvP.png"></img><a>2024年12月11日</a><a>　</a><a>TAMAG0 PvP</a><a>　</a><a href="https://www.youtube.com/@%E5%8D%B5%E6%8E%9B%E3%81%91%E3%81%AA%E3%81%84%E3%81%94%E9%A3%AF">卵かけないごはん</a><br>
 <img src="img/ZyrelleYT.png"></img><a>2024年12月27日</a><a>　</a><a>ZyrelleYT</a><a>　</a><a href="https://www.youtube.com/@ZyrelleYT">ZyrelleYT</a><br>
+<img src="img/koura77.png"></img><a>2024年12月28日</a><a>　</a><a>koura77</a><a>　</a><a href="https://www.youtube.com/@shinpaisyou_koura_77games">心配性のコウらGames</a>a>
